--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "marked": "^16.2.1",
     "nodemailer": "^6.9.8"
   }
 }
-
